# blocktalk

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
bitcoin-wallet/: Cargo.toml
bitcoin-wallet/src/: config.rs  error.rs  lib.rs  main.rs
bitcoin-wallet/src/rpc/: config.rs  error.rs  handlers.rs  mod.rs  server.rs  types.rs
bitcoin-wallet/src/wallet/: config.rs  database.rs  interface.rs  mod.rs  notification.rs  transaction.rs  types.rs
blocktalk/: Cargo.toml
blocktalk/example/: chain_query.rs  mempool.rs  monitor.rs
blocktalk/src/: block_template.rs  chain.rs  connection.rs  error.rs  lib.rs  mempool.rs  mining.rs  notification.rs
contrib/: lint.sh
example/: chain_query.rs  monitor.rs
examples/: chain_query.rs  monitor.rs
schema/: chain.capnp  mining.capnp
src/: chain.rs  connection.rs  error.rs  generated.rs  lib.rs  notification.rs
